# ankiflow-tts

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_cards.txt
src/ankiflow_tts/: __init__.py  __main__.py  anki_connect.py  cli.py  config.py  exceptions.py  filenames.py  importer.py  parser.py  reporting.py  retry.py  tts_deepgram.py  tts_gemini.py  types.py
tests/: __init__.py  test_anki_connect.py  test_cli.py  test_config.py  test_filenames.py  test_importer.py  test_parser.py  test_retry.py  test_tts_deepgram.py  test_tts_gemini.py
